--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -15,7 +15,7 @@
         android:text="Name:"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/black"/>
+        android:textColor="@color/white"/>
 
     <EditText
         android:id="@+id/eventNameET"
@@ -36,7 +36,7 @@
         android:text="Date"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/black"/>
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/eventTimeTV"
@@ -47,7 +47,7 @@
         android:text="Time"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/black"/>
+        android:textColor="@color/white"/>
 
     <Button
         android:layout_marginTop="20dp"
