--- a/app/src/main/res/layout/event_cell.xml
+++ b/app/src/main/res/layout/event_cell.xml
@@ -10,7 +10,7 @@
             android:layout_marginStart="20dp"
             android:id="@+id/eventCellTV"
             android:textSize="20sp"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
         android:text="Event"/>
 
     </LinearLayout>
