--- a/app/src/main/res/layout/exam_periods.xml
+++ b/app/src/main/res/layout/exam_periods.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:text="Afati i Janarit"
                 android:id="@+id/periods"
-                android:textColor="@color/black"
+                android:textColor="@color/blue"
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
