--- a/app/src/main/res/layout/exams_april.xml
+++ b/app/src/main/res/layout/exams_april.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/newTextView"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:layout_below="@id/card_view"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp" />
