--- a/app/src/main/res/layout/student_profile.xml
+++ b/app/src/main/res/layout/student_profile.xml
@@ -1,16 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExamPeriodsList">
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list_view">
-    </ListView>
+    tools:context=".Login"
+    android:background="@drawable/screen"
+    android:orientation="vertical"
+    android:padding="50dp">
 
-</RelativeLayout>
 
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/student"
+    android:text="Student!"
+    android:textSize="50dp"
+    android:textColor="@color/white"
+    android:textStyle="bold"
+    android:gravity="left"></TextView>
+
+<LinearLayout
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_margin="80dp"/>
+
+<TextView
+android:layout_width="match_parent"
+android:layout_height="60dp"
+android:id="@+id/personalInformation"
+android:layout_marginBottom="10dp"
+android:text="Personal Information"
+android:textAlignment="viewStart"
+    />
+
+   <androidx.appcompat.widget.AppCompatButton
+       android:layout_width="match_parent"
+       android:layout_height="60dp"
+       android:hint="Personal Information"
+       android:id="@+id/personalInformationn"
+       android:layout_marginBottom="10dp"
+       android:background="@drawable/btn_background_1"
+       android:drawableStart="@drawable/ic_3"
+       android:drawablePadding="20dp"
+       android:paddingStart="20dp"
+       android:text="Personal Information"
+       android:textAlignment="viewStart"
+       android:onClick="personalinformation"
+       />
+
+
+   <Button
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="13dp"
+android:text="Back to Login!"
+android:textSize="15dp"
+android:onClick="backToLogin"
+android:background="@drawable/btn_background_1" />
+</LinearLayout>
